--- a/app/src/main/res/layout/fragment_preset.xml
+++ b/app/src/main/res/layout/fragment_preset.xml
@@ -4,21 +4,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@xml/sound_background"
+    android:visibility="visible"
     tools:context=".PresetFragment">
 
     <TextView
         android:id="@+id/sonority_by"
         android:layout_width="187dp"
         android:layout_height="17dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
         android:layout_marginStart="112dp"
-        android:layout_marginLeft="112dp"
         android:layout_marginTop="37dp"
         android:fontFamily="sans-serif-medium"
         android:gravity="center_horizontal|center_vertical"
-        android:text="Sonority By Audientes"
+        android:text="@string/sonority_by_audientes"
         android:textAppearance="@style/sonority_by2"
         android:textStyle="bold" />
 
@@ -30,19 +27,20 @@
         android:layout_marginTop="70dp"
         android:fontFamily="sans-serif-medium"
         android:gravity="center_horizontal|center_vertical"
-        android:text="Sound"
+        android:text="@string/sound"
         android:textAppearance="@style/home"
         android:textColor="#1B325F"
         android:textStyle="bold" />
 
     <Button
         android:id="@+id/select_preset_button_1"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginStart="38dp"
         android:layout_marginTop="130dp"
         android:background="@xml/preset_add_rectangle"
-        android:text="Add New"
+        android:text="@string/add_new"
         android:textAppearance="@style/Play_ambience" />
 
     <Button
@@ -52,7 +50,7 @@
         android:layout_marginStart="161dp"
         android:layout_marginTop="130dp"
         android:background="@xml/preset_add_rectangle"
-        android:text="Add New"
+        android:text="@string/add_new"
         android:textAppearance="@style/Play_ambience" />
 
     <Button
@@ -62,7 +60,7 @@
         android:layout_marginStart="284dp"
         android:layout_marginTop="130dp"
         android:background="@xml/preset_add_rectangle"
-        android:text="Add New"
+        android:text="@string/add_new"
         android:textAppearance="@style/Play_ambience" />
 
     <Button
@@ -72,7 +70,7 @@
         android:layout_marginStart="284dp"
         android:layout_marginTop="255dp"
         android:background="@xml/preset_add_rectangle"
-        android:text="Add New"
+        android:text="@string/add_new"
         android:textAppearance="@style/Play_ambience" />
 
     <Button
@@ -82,7 +80,7 @@
         android:layout_marginStart="161dp"
         android:layout_marginTop="255dp"
         android:background="@xml/preset_add_rectangle"
-        android:text="Add New"
+        android:text="@string/add_new"
         android:textAppearance="@style/Play_ambience" />
 
     <Button
@@ -92,7 +90,7 @@
         android:layout_marginStart="38dp"
         android:layout_marginTop="255dp"
         android:background="@xml/preset_add_rectangle"
-        android:text="Add New"
+        android:text="@string/add_new"
         android:textAppearance="@style/Play_ambience" />
 
     <Button
@@ -102,7 +100,7 @@
         android:layout_marginStart="38dp"
         android:layout_marginTop="380dp"
         android:background="@xml/preset_add_rectangle"
-        android:text="Add New"
+        android:text="@string/add_new"
         android:textAppearance="@style/Play_ambience" />
 
     <Button
@@ -112,7 +110,7 @@
         android:layout_marginStart="161dp"
         android:layout_marginTop="380dp"
         android:background="@xml/preset_add_rectangle"
-        android:text="Add New"
+        android:text="@string/add_new"
         android:textAppearance="@style/Play_ambience" />
 
     <Button
@@ -125,53 +123,55 @@
         android:textAppearance="@style/Play_ambience" />
 
     <Button
+        android:id="@+id/play_button"
+        android:layout_width="40dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="195dp"
+        android:layout_marginTop="515dp"
+        android:background="@drawable/Add_buttons"
+        />
+
+
+    <Button
         android:id="@+id/edit_preset_button"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="520dp"
-        android:background="@drawable/ic_concurrent_marked_icon"
-        android:foreground="@drawable/ic_concurrent_icon"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="500dp"
+        android:background="@drawable/ic_concurrent_icon"
         android:textAppearance="@style/Play_ambience" />
+
 
     <TextView
         android:id="@+id/concurrent"
         android:layout_width="wrap_content"
         android:layout_height="17dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="50dp"
-        android:layout_marginLeft="150dp"
-        android:layout_marginTop="630dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="580dp"
         android:fontFamily="sans-serif-medium"
         android:gravity="center_horizontal|center_vertical"
-        android:text="Concurrent Mode"
+        android:text="@string/concurrent_mode"
         android:textAppearance="@style/sonority_by2"
         android:textStyle="bold" />
 
     <Button
         android:id="@+id/play_preset_button"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="250dp"
-        android:layout_marginTop="520dp"
-        android:background="@drawable/ic_continuous_marked_icon"
-        android:foreground="@drawable/ic_continuous_icon"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:layout_marginStart="300dp"
+        android:layout_marginTop="500dp"
+        android:background="@drawable/ic_continuous_icon"
         android:textAppearance="@style/Play_ambience" />
+
     <TextView
         android:id="@+id/continuous_Mode"
         android:layout_width="wrap_content"
         android:layout_height="17dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="250dp"
-        android:layout_marginLeft="150dp"
-        android:layout_marginTop="630dp"
+        android:layout_marginStart="280dp"
+        android:layout_marginTop="580dp"
         android:fontFamily="sans-serif-medium"
         android:gravity="center_horizontal|center_vertical"
-        android:text="Continuous Mode"
+        android:text="@string/continuous_mode"
         android:textAppearance="@style/sonority_by2"
         android:textStyle="bold" />
 
