--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorPrimary">#9cc4e4</color>
+    <color name="colorPrimaryDark">#1B325F</color>
     <color name="colorAccent">#D81B60</color>
 </resources>
