--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -8,12 +8,12 @@
 
     <item
         android:id="@+id/nav_vol"
-        android:icon="@drawable/ic_baseline_volume_up_24"
+        android:icon="@drawable/ic_volume_icon"
         android:title="Volume"/>
 
     <item
         android:id="@+id/nav_preset"
-        android:icon="@drawable/ic_baseline_library_music_24"
+        android:icon="@drawable/ic_library_icon"
         android:title="Library"/>
 
 </menu>
