--- a/app/src/main/res/layout/fragment_preset.xml
+++ b/app/src/main/res/layout/fragment_preset.xml
@@ -136,7 +136,7 @@
         android:layout_height="75dp"
         android:layout_marginStart="50dp"
         android:layout_marginTop="500dp"
-        android:background="@drawable/ic_concurrent_icon"
+        android:background="@drawable/settings_icon_tab"
         android:textAppearance="@style/Play_ambience" />
 
 
@@ -144,11 +144,11 @@
         android:id="@+id/concurrent"
         android:layout_width="wrap_content"
         android:layout_height="17dp"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="50dp"
         android:layout_marginTop="580dp"
         android:fontFamily="sans-serif-medium"
         android:gravity="center_horizontal|center_vertical"
-        android:text="@string/concurrent_mode"
+        android:text="@string/edit_preset"
         android:textAppearance="@style/sonority_by2"
         android:textStyle="bold" />
 
@@ -169,7 +169,7 @@
         android:layout_marginTop="580dp"
         android:fontFamily="sans-serif-medium"
         android:gravity="center_horizontal|center_vertical"
-        android:text="@string/continuous_mode"
+        android:text="@string/tom"
         android:textAppearance="@style/sonority_by2"
         android:textStyle="bold" />
 
