--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -44,8 +44,12 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="180dp"
         android:choiceMode="multipleChoice"
-        android:listSelector="@color/colorPrimary"
+        android:listSelector="@drawable/selector_list"
         android:drawSelectorOnTop="false"
+        android:fadingEdge="horizontal"
+        android:fadingEdgeLength="60dp"
+        android:requiresFadingEdge="vertical"
+        android:fillViewport = "false"
         >
         <!--- android:listSelector="@drawable/selector_list" -->
 
