--- a/app/src/main/res/drawable/listview_selector.xml
+++ b/app/src/main/res/drawable/listview_selector.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_selected="true" android:state_pressed="true">
+    <item android:state_selected="true" android:state_pressed="true" tools:ignore="StateListReachable">
         <shape android:shape="rectangle">
             <solid android:color="@android:color/white"/>
             <corners android:radius="5dp"/>
             <stroke android:color="@color/colorPrimaryDark"/>
+        </shape>
+    </item>
+    <item android:state_hovered="true">
+        <shape android:shape="rectangle">
+            <solid android:color="@android:color/white"/>
+            <corners android:radius="5dp"/>
+            <stroke android:color="@color/design_default_color_on_secondary"/>
         </shape>
     </item>
 
