--- a/app/src/main/res/drawable/listview_selector.xml
+++ b/app/src/main/res/drawable/listview_selector.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_selected="true" android:state_pressed="true" tools:ignore="StateListReachable">
+    <item android:state_pressed="true">
         <shape android:shape="rectangle">
             <solid android:color="@android:color/white"/>
             <corners android:radius="5dp"/>
