--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -41,7 +41,7 @@
         android:id="@+id/listview_songs"
         android:layout_width="250dp"
         android:layout_height="160dp"
-        android:layout_gravity="center_horizontal"
+        android:layout_marginStart="90dp"
         android:layout_marginTop="180dp">
         <!--- android:listSelector="@drawable/selector_list" -->
 
