--- a/app/src/main/res/layout/listview_text_color.xml
+++ b/app/src/main/res/layout/listview_text_color.xml
@@ -4,5 +4,7 @@
     android:textColor="#1B325F"
     android:textSize="20sp"
     android:layout_width="fill_parent"
-    android:gravity="start"
-    android:layout_height="fill_parent" />
+    android:gravity="center"
+    android:layout_height="fill_parent"
+    android:background="@drawable/list_item_selector"/>
+
