--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -39,12 +39,12 @@
 
     <ListView
         android:id="@+id/listview_songs"
-        android:layout_width="250dp"
-        android:layout_height="160dp"
+        android:layout_width="wrap_content"
+        android:layout_height="243dp"
         android:layout_marginStart="90dp"
-        android:layout_marginTop="180dp">
-        <!--- android:listSelector="@drawable/selector_list" -->
-
+        android:layout_marginTop="180dp"
+        android:choiceMode="multipleChoiceModal"
+        android:background="@drawable/blue_color">
     </ListView>
 
     <TextView
