--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -7,6 +7,11 @@
         android:title="Sound"/>
 
     <item
+        android:id="@+id/nav_create"
+        android:icon="@drawable/ic_edit_preset"
+        android:title="Edit preset"/>
+
+    <item
         android:id="@+id/nav_vol"
         android:icon="@drawable/ic_volume_icon"
         android:title="Volume"/>
@@ -15,5 +20,7 @@
         android:id="@+id/nav_preset"
         android:icon="@drawable/ic_library_icon"
         android:title="Library"/>
+
+
 
 </menu>
