--- a/app/src/main/res/layout/fragment_volume.xml
+++ b/app/src/main/res/layout/fragment_volume.xml
@@ -44,6 +44,7 @@
         android:elevation="4dp" />
 
     <Button
+        android:id="@+id/adjust_button"
         android:layout_width="55dp"
         android:layout_height="55dp"
         android:layout_gravity="center_horizontal"
