--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -43,8 +43,7 @@
         android:layout_height="243dp"
         android:layout_marginStart="90dp"
         android:layout_marginTop="180dp"
-        android:choiceMode="multipleChoiceModal"
-        android:background="@drawable/blue_color">
+        android:choiceMode="multipleChoiceModal">
     </ListView>
 
     <TextView
