--- a/app/src/main/res/layout/list_view_item.xml
+++ b/app/src/main/res/layout/list_view_item.xml
@@ -7,6 +7,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:textColor="#1B325F"
         android:id="@+id/tv_user_name"
         android:gravity="center_vertical"/>
 
