--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -39,11 +39,11 @@
 
     <ListView
         android:id="@+id/listview_songs"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="243dp"
         android:layout_marginStart="90dp"
-        android:layout_marginTop="180dp"
-        android:choiceMode="multipleChoiceModal">
+        android:layout_marginTop="180dp">
+
     </ListView>
 
     <TextView
