--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -1,114 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@xml/sound_background"
-    android:overScrollMode="never"
     tools:context=".LibraryFragment">
 
-    <TextView
-        android:layout_width="187dp"
-        android:layout_height="17dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="112dp"
-        android:layout_marginLeft="112dp"
-        android:layout_marginTop="37dp"
-        android:fontFamily="sans-serif-medium"
-        android:gravity="center_horizontal|center_vertical"
-        android:text="Sonority By Audientes"
-        android:textAppearance="@style/sonority_by2"
-        android:textStyle="bold" />
+        <ListView
+            android:id="@+id/listview_songs"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="60dp"
-        android:fontFamily="sans-serif-medium"
-        android:gravity="center"
-        android:text="Sound Library"
-        android:textAppearance="@style/home"
-        android:textColor="#1B325F"
-        android:textStyle="bold" />
-        <!--app:drawableLeftCompat="@drawable/ic_ambience_icon" -->
-
-
-    <ListView
-        android:id="@+id/listview_songs"
-        android:layout_width="match_parent"
-        android:layout_height="243dp"
-        android:layout_marginStart="90dp"
-        android:layout_marginTop="180dp">
-
-    </ListView>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="440dp"
-        android:layout_marginStart="60dp"
-        android:text="Type Your Preset Title here ..."
-        android:textSize="18dp"
-        android:textColor="#1B325F"/>
-
-    <View
-        android:layout_width="300dp"
-        android:layout_height="439dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="180dp"
-        android:background="@drawable/listview_rectangle"
-        android:fadeScrollbars="true"
-        android:isScrollContainer="true"
-        android:scrollbarAlwaysDrawHorizontalTrack="false"
-        android:scrollbarAlwaysDrawVerticalTrack="false"
-        android:scrollbarDefaultDelayBeforeFade="0"
-        android:scrollbars="none" />
-
-    <Button
-        android:layout_width="75dp"
-        android:layout_height="32dp"
-        android:layout_marginStart="20dp"
-        android:layout_gravity="left"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="10dp"
-        android:background="@drawable/ic_selected_sound"
-        android:text="Cancel"
-        android:textAppearance="@style/Play_ambience"
-        android:textStyle="bold" />
-
-    <Button
-        android:layout_width="110dp"
-        android:layout_height="32dp"
-        android:layout_gravity="right"
-        android:layout_marginTop="130dp"
-        android:layout_marginEnd="10dp"
-        android:background="@drawable/ic_selected_sound"
-        android:text="Add to Library"
-        android:textAppearance="@style/Play_ambience"
-        android:textStyle="bold" />
-
-    <Button
-        android:layout_width="90dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="500dp"
-        android:background="@xml/edit_play_rectangle"
-        android:text="Display Selected"
-        android:textAppearance="@style/Play_ambience"
-        android:textStyle="bold" />
-
-    <Button
-        android:layout_width="90dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="240dp"
-        android:layout_marginTop="500dp"
-        android:background="@xml/edit_play_rectangle"
-        android:text="Add As Preset"
-        android:textAppearance="@style/Play_ambience"
-        android:textStyle="bold" />
-
-</FrameLayout>
+</RelativeLayout>
