--- a/app/src/main/res/layout/list_view_item.xml
+++ b/app/src/main/res/layout/list_view_item.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:orientation="vertical">
+    android:layout_height="50dp" >
 
     <TextView
+        android:id="@+id/sound_name"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:textColor="#1B325F"
-        android:id="@+id/sound_name"
         android:layout_marginLeft="25dp"
         android:textSize="18dp"
         android:textStyle="bold"
@@ -22,6 +21,8 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="25dp"
+        android:visibility="gone"
+
         />
 
 </RelativeLayout>
