--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -41,7 +41,8 @@
         android:id="@+id/listview_songs"
         android:layout_width="match_parent"
         android:layout_height="243dp"
-        android:layout_marginStart="90dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="60dp"
         android:layout_marginTop="180dp">
 
     </ListView>
