--- a/app/src/main/res/layout/list_view_item.xml
+++ b/app/src/main/res/layout/list_view_item.xml
@@ -15,12 +15,13 @@
         android:gravity="center"
         android:layout_alignParentLeft="true"/>
 
-    <CheckBox
+    <ImageView
         android:id="@+id/iv_check_box"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
+        android:background="@drawable/check"
         android:layout_marginRight="25dp"
         />
 
