Genbruger de samme fragments, når der klikkes add New på PresetFragment

--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -43,7 +43,7 @@
         android:layout_height="209dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="180dp"
-        android:choiceMode="multipleChoice"
+        android:choiceMode="singleChoice"
         android:drawSelectorOnTop="false"
         android:fadingEdge="horizontal"
         android:fadingEdgeLength="60dp"
