--- a/app/src/main/res/menu/context_menu.xml
+++ b/app/src/main/res/menu/context_menu.xml
@@ -5,11 +5,9 @@
         android:id="@+id/action_delete"
         android:title="Delete"
         android:icon="@drawable/ic_delete"/>
+
     <item
         android:id="@+id/action_share"
-        android:title="Share"
+        android:title="Delete"
         android:icon="@drawable/ic_share"/>
-
-
-
 </menu>
