--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:textColor="#1B325F"
+        android:background="#1B325F"
         android:layout_centerInParent="true"
         android:layout_marginRight="25dp"
         android:id="@+id/checkbox"
