--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -11,6 +11,8 @@
             android:id="@+id/listview_songs"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:choiceMode="multipleChoice"/>
+            android:choiceMode="multipleChoice"
+            android:layout_marginTop="200dp"
+            android:layout_marginBottom="200dp"/>
 
 </RelativeLayout>
