--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerInParent="true"
-        android:background="#1B325F"
+        android:background="@color/colorPrimaryDark"
         android:layout_marginRight="25dp"
         android:id="@+id/checkbox"
 
