--- a/app/src/main/res/drawable/image_chechbox.xml
+++ b/app/src/main/res/drawable/image_chechbox.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item android:state_checked="false" android:drawable="@drawable/check_box_outline_blank"/>
+    <item android:drawable="@drawable/check_box_outline_blank" android:state_checked="false" />
     <item android:drawable="@drawable/ic_baseline_check_box_24" android:state_checked="true"/>
-
+    <item android:drawable="@drawable/check_box_outline_blank"/>
 </selector>
